--- a/app/src/main/res/layout/activity_countdown.xml
+++ b/app/src/main/res/layout/activity_countdown.xml
@@ -20,13 +20,13 @@
             android:id="@+id/et_countdown_timer25"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:hint="@string/input_time_length_s"
+            android:inputType="number"
+            android:textSize="12sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        style="@style/MatchWidthItem"
         android:orientation="horizontal">
 
         <Button
@@ -40,7 +40,48 @@
             android:id="@+id/et_countdown_timer26"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:hint="@string/input_time_length_s"
+            android:inputType="number"
+            android:textSize="12sp" />
     </LinearLayout>
+
+    <LinearLayout
+        style="@style/MatchWidthItem"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:text="log:" />
+
+        <Button
+            android:id="@+id/btn_clear_log"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="clear log"
+            android:textAllCaps="false" />
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/tv_log"
+        style="@style/MatchWidthItem"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@android:color/white"
+        android:fadeScrollbars="false"
+        android:padding="5dp"
+        android:scrollbars="vertical" />
+
+    <TextView
+        android:id="@+id/tv_code"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:padding="5dp"
+        android:text="@string/see_code" />
 
 </LinearLayout>
