--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,22 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_countdown"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="countdown"
-        android:textAllCaps="false" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/btn_countdown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="countdown"
+            android:textAllCaps="false" />
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/tv_source_code"
+        android:id="@+id/tv_code"
         style="@style/WrapItem"
-        android:text="github" />
+        android:text="@string/see_code" />
 </LinearLayout>
