--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,25 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:gravity="center"
     android:orientation="vertical">
 
-    <LinearLayout
+    <Button
+        android:id="@+id/btn_countdown"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center">
-
-        <Button
-            android:id="@+id/btn_countdown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="countdown"
-            android:textAllCaps="false" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_code"
-        style="@style/WrapItem"
-        android:text="@string/see_code" />
+        android:layout_height="wrap_content"
+        android:text="countdown"
+        android:textAllCaps="false" />
 </LinearLayout>
