--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -10,6 +10,6 @@
         android:id="@+id/btn_countdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="countdown"
+        android:text="@string/main_btn_countdown"
         android:textAllCaps="false" />
 </LinearLayout>
