--- a/app/src/main/res/layout/activity_countdown.xml
+++ b/app/src/main/res/layout/activity_countdown.xml
@@ -32,6 +32,28 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btn_start_countdown_timer25_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/countdown_btn_start_timer25_add"
+            android:textAllCaps="false" />
+
+        <EditText
+            android:id="@+id/et_countdown_timer25_add"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/countdown_edt_hint"
+            android:inputType="number"
+            android:textSize="@dimen/font_12" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_5"
+        android:orientation="horizontal">
+
+        <Button
             android:id="@+id/btn_start_countdown_timer26"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,6 +62,28 @@
 
         <EditText
             android:id="@+id/et_countdown_timer26"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/countdown_edt_hint"
+            android:inputType="number"
+            android:textSize="@dimen/font_12" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_5"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_start_countdown_timer26_round"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/countdown_btn_start_timer26_round"
+            android:textAllCaps="false" />
+
+        <EditText
+            android:id="@+id/et_countdown_timer26_round"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/countdown_edt_hint"
